2007-08-16  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/Account.cs: Added code to update full information in
	  ProviderUser when a contact is moved from local pending to fully
	  authorized

2007-08-15  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/Account.cs: Added code to discover a remote contact's media
	  capability on initial setup.
	
	  Partially added code for media capability callback for when media
	  caps change
	* Banter/ChatWindow.cs: added a try catch around the code thats sets up
	  audio and video channels to catch cases where a user attempts voice
	  video chat with a remote user that doesn't support it
	* Banter/ProviderUser.cs: added privateType for holding media
	  capabilities
	
	  added public Property for exposing media capabilities
	
	  added public Enum for defining media capabilities
	* Banter/PersonCard.cs: added code to check a provider users' media
	  capabilities and add caps icons accordingly

2007-08-10  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac: bumped the version to 0.2.0 in prep for the stable
	  release next iteration

2007-08-10  Calvin Gaisford <calvinrg@gmail.com> 

	* NEWS: Updated for version 0.1.10 release

2007-08-09  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/PersonCard.cs: Added the base on OnUnrealize to make sure
	  things were getting deleted correclty

2007-08-09  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter.mdp, Banter/Makefile.am: Added CairoHelper and reference to
	  mono-cairo
	* configure.ac: added mono-cairo
	* data/images/badge.png: removed because badge is now done in cairo
	* data/images/Makefile.am: removed badge.png
	* Banter/NotifyButton.cs: updated drawing to use cairo
	* Banter/CairoHelper.cs: added file

2007-08-09  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/Account.cs: more work to support authorization and rescinding
	* Banter/ProviderUserManager.cs: new method to delete a provider user
	  with the volatile contact handle
